# RAG-with-LangChain-Vector-Databases

./: .gitignore  README.md  advanced_rag.py  chunking_comparison.py  cost_optimization.py  document_loaders.py  embeddings.py  main.py  observability_deep_dive.py  prod_hybrid_search.py  production_cost_optimization.py  production_monitoring.py  pyproject.toml  rag_multiSource_pipeline.py  rag_pipeline.py  rag_telemetry_output.txt  raw_emb.py  smart_chunker.py  text_splitters.py  vector_stores.py
docs/: README.md  test_houses_10_rows.csv
