[project]
name = "rag-with-langchain-vector-databases"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.23.0",
    "langchain>=1.3.13",
    "langchain-anthropic>=1.4.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "transformers>=5.13.1",
]
